# drf-starter

./: .gitignore  Makefile  docker-compose.yml
backend/: .Dockerfile.swp  .settings.py.swp  .urls.py.swp  .wsgi.py.swp  Dockerfile  pyproject.toml  settings.py  urls.py
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_task_end.py  0003_alter_task_end.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: TaskForm.vue  TaskList.vue
