[tool.poetry]
name = "drf-starter"
version = "0.1.0"
description = ""
authors = ["Christian Zosel <christian@zosel.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
